[package]
name = "json5format"
version = "0.1.0"
authors = ["Rich Kadel <richkadel@google.com>"]
edition = "2018"
keywords = ["json", "json5", "style", "formatter", "comments"]
license = "BSD-3-Clause"
description = "Customizable JSON5 document formatter that preserves comments"
repository = "https://github.com/google/json5format"

[dependencies]
anyhow = "1.0.25"
lazy_static = "1.4"
maplit = "1.0"
regex = "1.0.6"
proptest = "0.9.3"
structopt = "0.2.14"
