[package]
name = "json5format"
version = "0.2.4"
authors = [
  "Rich Kadel <richkadel@google.com>",
  "David Tamas-Parris <davidatp@google.com>",
]
edition = "2018"
keywords = ["json", "json5", "style", "formatter", "comments"]
license = "BSD-3-Clause"
description = "Customizable JSON5 document formatter that preserves comments"
repository = "https://github.com/google/json5format"

[dependencies]
lazy_static = "1.4"
regex = "1.3.5"

[dev-dependencies]
anyhow = "1.0.25"
maplit = "1.0.1"
proptest = "0.9.3"
structopt = "0.2.14"
